# documents_interaction

./: .env  main.py  pyproject.toml
vectorstore/db_faiss/: index.faiss  index.pkl
