[tool.poetry]
name = "documents-interaction"
version = "0.1.0"
description = ""
authors = ["Ruan Oliveira <127878189+RuanHOliveira@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-core = "^0.3.21"
langchain-community = "^0.3.9"
streamlit = "^1.40.2"
python-dotenv = "^1.0.1"
langchain = "^0.3.9"
faiss-cpu = "^1.9.0.post1"
pypdf = "^5.1.0"
torchaudio = "^2.5.1"
langchain-huggingface = "^0.1.2"
langchain-text-splitters = "^0.3.2"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
